tests/idris2/error/perror018/ParseRecord2.idr
record R where
  constructor MkR
  one : Type
  _ : Type
